--- a/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
+++ b/NumPy Mini-Project/Mean Normalization and Data Separation.ipynb
@@ -17,17 +17,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# import NumPy into Python\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "# Create a 1000 x 20 ndarray with random integers in the half-open interval [0, 5001).\n",
-    "X = \n",
+    "X = np.random.randint(0, 5001, size=(1000, 20))\n",
     "\n",
-    "# print the shape of X\n"
+    "# print the shape of X\n",
+    "print(X.shape)\n"
    ]
   },
   {
@@ -43,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Average of the values in each column of X\n",
-    "ave_cols =\n",
+    "ave_cols = X.mean(axis=0)\n",
     "\n",
     "# Standard Deviation of the values in each column of X\n",
-    "std_cols ="
+    "std_cols = X.std(axis=0)"
    ]
   },
   {
@@ -63,14 +73,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20,)\n",
+      "[2491.73  2484.432 2506.269 2467.058 2425.29  2458.325 2485.268 2443.746\n",
+      " 2538.871 2539.813 2434.386 2509.848 2523.186 2432.563 2562.309 2478.518\n",
+      " 2415.79  2442.811 2480.935 2591.803]\n",
+      "(20,)\n",
+      "[1437.76418689 1444.17361469 1425.88987115 1462.17370878 1454.64700182\n",
+      " 1412.65559758 1405.1729702  1445.24754125 1449.27063876 1403.5524415\n",
+      " 1432.6108205  1429.86154256 1429.80260925 1470.61235342 1484.31683664\n",
+      " 1444.23580543 1451.29374211 1481.50723632 1433.20133923 1450.628255  ]\n",
+      "[2644  560 4126   75 1714 1725 2461  870 2336 2770 2592  761 1785 4341\n",
+      " 3979 4638 1628 4303   56 2648]\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of ave_cols\n",
+    "print(ave_cols.shape)\n",
+    "print(ave_cols)\n",
     "\n",
     "\n",
-    "# Print the shape of std_cols\n"
+    "# Print the shape of std_cols\n",
+    "print(std_cols.shape)\n",
+    "print(std_cols)\n",
+    "\n",
+    "print(X[0])"
    ]
   },
   {
@@ -82,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mean normalize X\n",
-    "X_norm ="
+    "X_norm = (X - ave_cols) / std_cols"
    ]
   },
   {
@@ -99,17 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.881784197001253e-20\n",
+      "-1.8088479809795497\n",
+      "1.7956782986206767\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the average of all the values of X_norm\n",
+    "print(X_norm.mean())\n",
     "\n",
     "\n",
     "# Print the average of the minimum value in each column of X_norm\n",
+    "print(X_norm.min())\n",
     "\n",
     "\n",
-    "# Print the average of the maximum value in each column of X_norm\n"
+    "# Print the average of the maximum value in each column of X_norm\n",
+    "print(X_norm.max())\n"
    ]
   },
   {
@@ -135,9 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 0])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We create a random permutation of integers 0 to 4\n",
     "np.random.permutation(5)"
@@ -154,12 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a rank 1 ndarray that contains a random permutation of the row indices of `X_norm`\n",
-    "row_indices ="
+    "row_indices = np.random.permutation(X_norm.shape[0])"
    ]
   },
   {
@@ -171,22 +229,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "600\n",
+      "800\n"
+     ]
+    }
+   ],
    "source": [
     "# Make any necessary calculations.\n",
     "# You can save your calculations into variables to use later.\n",
-    "\n",
+    "train_upper = int(len(X_norm) * .6)\n",
+    "cross_val_upper = train_upper + int(len(X_norm) * .2)\n",
+    "print(train_upper)\n",
+    "print(cross_val_upper)\n",
     "\n",
     "# Create a Training Set\n",
-    "X_train =\n",
+    "X_train = X_norm[:train_upper]\n",
     "\n",
     "# Create a Cross Validation Set\n",
-    "X_crossVal =\n",
+    "X_crossVal = X_norm[train_upper:cross_val_upper]\n",
     "\n",
     "# Create a Test Set\n",
-    "X_test ="
+    "X_test = X_norm[cross_val_upper:]"
    ]
   },
   {
@@ -198,17 +268,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(600, 20)\n",
+      "(200, 20)\n",
+      "(200, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the shape of X_train\n",
+    "print(X_train.shape)\n",
     "\n",
     "\n",
     "# Print the shape of X_crossVal\n",
+    "print(X_crossVal.shape)\n",
     "\n",
     "\n",
-    "# Print the shape of X_test\n"
+    "# Print the shape of X_test\n",
+    "print(X_test.shape)\n"
    ]
   },
   {
@@ -235,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
